@@ -3,10 +3,10 @@ package org.jetbrains.plugins.ipnb.editor.panels.code;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.ui.components.JBLabel;
-import com.intellij.util.Base64;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.plugins.ipnb.editor.IpnbEditorUtil;
 import org.jetbrains.plugins.ipnb.format.cells.output.IpnbImageOutputCell;
+import sun.misc.BASE64Decoder;
 
 import javax.imageio.ImageIO;
 import javax.swing.*;
@@ -17,7 +17,7 @@ public class IpnbImagePanel extends IpnbCodeOutputPanel<IpnbImageOutputCell> {
   private static final Logger LOG = Logger.getInstance(IpnbImagePanel.class);
 
   public IpnbImagePanel(@NotNull final IpnbImageOutputCell cell) {
-    super(cell);
+    super(cell, null);
   }
 
   @Override
@@ -27,7 +27,7 @@ public class IpnbImagePanel extends IpnbCodeOutputPanel<IpnbImageOutputCell> {
     final JBLabel label = new JBLabel();
     if (!StringUtil.isEmptyOrSpaces(png)) {
       try {
-        byte[] btDataFile = Base64.decode(png);
+        byte[] btDataFile = new BASE64Decoder().decodeBuffer(png);
         BufferedImage image = ImageIO.read(new ByteArrayInputStream(btDataFile));
         label.setIcon(new ImageIcon(image));
       }
